fix: resolve issue with scrollbar after preloder

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,3 +34,6 @@ body {
   overscroll-behavior: none;
 }
 
+body {
+  overflow-y: hidden;
+}
